--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -173,7 +173,7 @@
     },
     {
         "id": "ツリービュー説明",
-        "translation": "フォルダ内のモデルをツリー表示します"
+        "translation": "指定したフォルダ配下を再帰的に走査し、PMX/PMD/Xモデルを階層ツリーで表示します。ツリーの項目をクリックするとモデルを読み込み、マウスを合わせるとパスコピー用アイコンが表示されます。"
     },
     {
         "id": "パスコピー",
