--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -173,7 +173,7 @@
     },
     {
         "id": "ツリービュー説明",
-        "translation": "Show model files in a tree"
+        "translation": "선택한 폴더를 재귀적으로 스캔하여 PMX/PMD/X 모델 파일을 계층 트리로 표시합니다. 항목을 클릭하면 모델을 불러오고, 마우스를 올리면 경로 복사 아이콘이 표시됩니다."
     },
     {
         "id": "パスコピー",
