スクショ対応

--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -188,6 +188,10 @@
         "translation": "フルパスコピー"
     },
     {
+        "id": "スクリーンショット保存",
+        "translation": "スクリーンショット保存"
+    },
+    {
         "id": "読み込み失敗",
         "translation": "読み込み失敗"
     },
@@ -202,6 +206,14 @@
     {
         "id": "パスコピーに失敗しました",
         "translation": "パスコピーに失敗しました"
+    },
+    {
+        "id": "スクリーンショットを保存しました",
+        "translation": "スクリーンショットを保存しました"
+    },
+    {
+        "id": "スクリーンショット保存に失敗しました",
+        "translation": "スクリーンショット保存に失敗しました"
     },
     {
         "id": "ツリー構築に失敗しました",
