--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -188,6 +188,10 @@
         "translation": "复制完整路径"
     },
     {
+        "id": "スクリーンショット保存",
+        "translation": "保存截图"
+    },
+    {
         "id": "読み込み失敗",
         "translation": "加载失败"
     },
@@ -202,6 +206,14 @@
     {
         "id": "パスコピーに失敗しました",
         "translation": "复制路径失败"
+    },
+    {
+        "id": "スクリーンショットを保存しました",
+        "translation": "已保存截图"
+    },
+    {
+        "id": "スクリーンショット保存に失敗しました",
+        "translation": "保存截图失败"
     },
     {
         "id": "ツリー構築に失敗しました",
