--- a/cmd/i18n/app.en.json
+++ b/cmd/i18n/app.en.json
@@ -188,6 +188,10 @@
         "translation": "Copy Full Path"
     },
     {
+        "id": "スクリーンショット保存",
+        "translation": "Save Screenshot"
+    },
+    {
         "id": "読み込み失敗",
         "translation": "Load failed"
     },
@@ -202,6 +206,14 @@
     {
         "id": "パスコピーに失敗しました",
         "translation": "Failed to copy path"
+    },
+    {
+        "id": "スクリーンショットを保存しました",
+        "translation": "Screenshot saved"
+    },
+    {
+        "id": "スクリーンショット保存に失敗しました",
+        "translation": "Failed to save screenshot"
     },
     {
         "id": "ツリー構築に失敗しました",
