--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -188,6 +188,10 @@
         "translation": "전체 경로 복사"
     },
     {
+        "id": "スクリーンショット保存",
+        "translation": "스크린샷 저장"
+    },
+    {
         "id": "読み込み失敗",
         "translation": "로드 실패"
     },
@@ -202,6 +206,14 @@
     {
         "id": "パスコピーに失敗しました",
         "translation": "경로 복사에 실패했습니다"
+    },
+    {
+        "id": "スクリーンショットを保存しました",
+        "translation": "스크린샷을 저장했습니다"
+    },
+    {
+        "id": "スクリーンショット保存に失敗しました",
+        "translation": "스크린샷 저장에 실패했습니다"
     },
     {
         "id": "ツリー構築に失敗しました",
