--- a/cmd/i18n/app.ja.json
+++ b/cmd/i18n/app.ja.json
@@ -5,7 +5,7 @@
     },
     {
         "id": "使い方説明",
-        "translation": "vmd/vpdファイルの拡張子にツールを関連付けると、ファイルをダブルクリックしてビューワーを起動できます。\nPMX/PMDモデルと照合して不足準標準ボーンやモーフの確認ができます。"
+        "translation": "フォルダを指定して配下のPMX/PMD/Xモデルをツリー表示します。\nツリー項目をクリック、または↑↓キーでモデルを切り替えられます。\n右クリックメニューからフルパスコピーやスクリーンショット保存ができます。"
     },
     {
         "id": "使い方",
@@ -157,7 +157,7 @@
     },
     {
         "id": "フォルダパス説明",
-        "translation": "対象フォルダを指定してください"
+        "translation": "モデルを探すフォルダを指定します。ドラッグ&ドロップで複数フォルダを追加できます。"
     },
     {
         "id": "モーションパス",
@@ -165,7 +165,7 @@
     },
     {
         "id": "モーションパス説明",
-        "translation": "モーションファイルを選択してください"
+        "translation": "表示中モデルに適用するVMD/VPDを指定します。未指定の場合は初期姿勢で表示されます。"
     },
     {
         "id": "ツリービュー",
@@ -173,7 +173,7 @@
     },
     {
         "id": "ツリービュー説明",
-        "translation": "指定したフォルダ配下を再帰的に走査し、PMX/PMD/Xモデルを階層ツリーで表示します。ツリーの項目をクリックするとモデルを読み込み、マウスを合わせるとパスコピー用アイコンが表示されます。"
+        "translation": "指定フォルダ配下のモデルを階層ツリーで表示します。クリック/↑↓でモデルを切り替えます。\n右クリックでフルパスコピーやスクリーンショット保存ができます。フォルダ右クリックは配下の全モデルを順に切り替えてスクリーンショット保存します。"
     },
     {
         "id": "パスコピー",
@@ -181,7 +181,7 @@
     },
     {
         "id": "パスコピー説明",
-        "translation": "パスをクリップボードにコピーします"
+        "translation": "ツリービューの項目を右クリックし、フルパスコピーでクリップボードにコピーします。"
     },
     {
         "id": "フルパスコピー",
