--- a/cmd/i18n/app.zh.json
+++ b/cmd/i18n/app.zh.json
@@ -5,7 +5,7 @@
     },
     {
         "id": "使い方説明",
-        "translation": "将工具与 vmd/vpd 扩展名关联后，双击文件即可启动查看器。\n可与 PMX/PMD 模型对照检查缺少的标准骨骼/变形。"
+        "translation": "指定文件夹后，会以树状显示其中的 PMX/PMD/X 模型。\n点击树项目或使用 ↑↓ 键切换模型。\n右键菜单可复制完整路径或保存截图。"
     },
     {
         "id": "使い方",
@@ -157,7 +157,7 @@
     },
     {
         "id": "フォルダパス説明",
-        "translation": "Select a target folder"
+        "translation": "选择要搜索模型的文件夹。支持拖放多个文件夹。"
     },
     {
         "id": "モーションパス",
@@ -165,7 +165,7 @@
     },
     {
         "id": "モーションパス説明",
-        "translation": "Select a motion file"
+        "translation": "选择要应用到当前模型的 VMD/VPD。未指定时以默认姿势显示。"
     },
     {
         "id": "ツリービュー",
@@ -173,7 +173,7 @@
     },
     {
         "id": "ツリービュー説明",
-        "translation": "会递归扫描所选文件夹，并以层级树显示 PMX/PMD/X 模型文件。点击项目即可加载模型，鼠标悬停时会显示路径复制图标。"
+        "translation": "以层级树显示所选文件夹下的模型。点击/↑↓ 切换模型，右键可复制完整路径或保存截图。右键文件夹会按顺序切换并保存其下所有模型的截图。"
     },
     {
         "id": "パスコピー",
@@ -181,7 +181,7 @@
     },
     {
         "id": "パスコピー説明",
-        "translation": "复制路径到剪贴板"
+        "translation": "在树项目上右键，选择“复制完整路径”即可复制到剪贴板。"
     },
     {
         "id": "フルパスコピー",
