--- a/cmd/i18n/app.ko.json
+++ b/cmd/i18n/app.ko.json
@@ -5,7 +5,7 @@
     },
     {
         "id": "使い方説明",
-        "translation": "vmd/vpd 파일 확장자를 도구에 연결하면 파일을 더블 클릭하여 뷰어를 실행할 수 있습니다.\nPMX/PMD 모델과 대조하여 부족한 표준 본/모프를 확인할 수 있습니다."
+        "translation": "폴더를 지정하면 하위 PMX/PMD/X 모델을 트리로 표시합니다.\n트리 항목을 클릭하거나 ↑↓ 키로 모델을 전환할 수 있습니다.\n우클릭 메뉴에서 전체 경로 복사와 스크린샷 저장이 가능합니다."
     },
     {
         "id": "使い方",
@@ -157,7 +157,7 @@
     },
     {
         "id": "フォルダパス説明",
-        "translation": "Select a target folder"
+        "translation": "모델을 찾을 폴더를 지정합니다. 드래그 앤 드롭으로 여러 폴더를 추가할 수 있습니다."
     },
     {
         "id": "モーションパス",
@@ -165,7 +165,7 @@
     },
     {
         "id": "モーションパス説明",
-        "translation": "Select a motion file"
+        "translation": "현재 모델에 적용할 VMD/VPD를 지정합니다. 지정하지 않으면 기본 자세로 표시됩니다."
     },
     {
         "id": "ツリービュー",
@@ -173,7 +173,7 @@
     },
     {
         "id": "ツリービュー説明",
-        "translation": "선택한 폴더를 재귀적으로 스캔하여 PMX/PMD/X 모델 파일을 계층 트리로 표시합니다. 항목을 클릭하면 모델을 불러오고, 마우스를 올리면 경로 복사 아이콘이 표시됩니다."
+        "translation": "지정한 폴더 아래의 모델을 계층 트리로 표시합니다. 클릭/↑↓로 모델을 전환합니다.\n우클릭으로 전체 경로 복사 또는 스크린샷 저장을 할 수 있습니다. 폴더를 우클릭하면 하위 모델을 순서대로 전환하면서 스크린샷을 저장합니다."
     },
     {
         "id": "パスコピー",
@@ -181,7 +181,7 @@
     },
     {
         "id": "パスコピー説明",
-        "translation": "경로를 클립보드에 복사합니다"
+        "translation": "트리 항목을 우클릭하고 '전체 경로 복사'를 선택하면 클립보드에 복사됩니다."
     },
     {
         "id": "フルパスコピー",
